kdirwatch: Avoid potential crash if d-ptr destroyed before KDirWatch.

Found in a code review and patch proposed by René, although we've not
actually gone so far as to create a test case that forces a crash.

Committed by mpyne to get the bug closed out.

BUG:381583
FIXED-IN:5.37